--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -15,13 +15,14 @@
 	<description>Demo project for Best Price Guarantee</description>
 	<properties>
 		<java.version>17</java.version>
+		<spring.boot.version>3.0.0</spring.boot.version>
+		<spring.kafka.version>3.0.0</spring.kafka.version>
 	</properties>
 	<dependencies>
 		<!-- Spring Kafka -->
 		<dependency>
 			<groupId>org.springframework.kafka</groupId>
 			<artifactId>spring-kafka</artifactId>
-			<version>3.0.10</version>
 		</dependency>
 		<dependency>
 			<groupId>org.mapstruct</groupId>
